--- a/wf_tictactoe_proj1/wf_tictactoe_proj1.vcxproj.filters
+++ b/wf_tictactoe_proj1/wf_tictactoe_proj1.vcxproj.filters
@@ -24,4 +24,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="mainForm.resx">
+      <Filter>Resource Files</Filter>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="..\..\..\..\Desktop\Inconsolata-Regular.ttf" />
+  </ItemGroup>
 </Project>
