--- a/wf_tictactoe_proj1/wf_tictactoe_proj1.vcxproj
+++ b/wf_tictactoe_proj1/wf_tictactoe_proj1.vcxproj
@@ -145,6 +145,9 @@
       <DependentUpon>mainForm.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="..\..\..\..\Desktop\Inconsolata-Regular.ttf" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
