--- a/wf_tictactoe_proj1/wf_tictactoe_proj1.vcxproj.filters
+++ b/wf_tictactoe_proj1/wf_tictactoe_proj1.vcxproj.filters
@@ -31,5 +31,6 @@
   </ItemGroup>
   <ItemGroup>
     <Font Include="..\..\..\..\Desktop\Inconsolata-Regular.ttf" />
+    <Font Include="..\..\..\..\Desktop\Inconsolata-Bold.ttf" />
   </ItemGroup>
 </Project>
